; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_mdesc.c_mdesc_alloc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_mdesc.c_mdesc_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mdesc_handle = type { %struct.mdesc_mem_ops* }
%struct.mdesc_mem_ops = type { %struct.mdesc_handle* (i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mdesc_handle* (i32, %struct.mdesc_mem_ops*)* @mdesc_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mdesc_handle* @mdesc_alloc(i32 %0, %struct.mdesc_mem_ops* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mdesc_mem_ops*, align 8
  %5 = alloca %struct.mdesc_handle*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.mdesc_mem_ops* %1, %struct.mdesc_mem_ops** %4, align 8
  %6 = load %struct.mdesc_mem_ops*, %struct.mdesc_mem_ops** %4, align 8
  %7 = getelementptr inbounds %struct.mdesc_mem_ops, %struct.mdesc_mem_ops* %6, i32 0, i32 0
  %8 = load %struct.mdesc_handle* (i32)*, %struct.mdesc_handle* (i32)** %7, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call %struct.mdesc_handle* %8(i32 %9)
  store %struct.mdesc_handle* %10, %struct.mdesc_handle** %5, align 8
  %11 = load %struct.mdesc_handle*, %struct.mdesc_handle** %5, align 8
  %12 = icmp ne %struct.mdesc_handle* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load %struct.mdesc_mem_ops*, %struct.mdesc_mem_ops** %4, align 8
  %15 = load %struct.mdesc_handle*, %struct.mdesc_handle** %5, align 8
  %16 = getelementptr inbounds %struct.mdesc_handle, %struct.mdesc_handle* %15, i32 0, i32 0
  store %struct.mdesc_mem_ops* %14, %struct.mdesc_mem_ops** %16, align 8
  br label %17

17:                                               ; preds = %13, %2
  %18 = load %struct.mdesc_handle*, %struct.mdesc_handle** %5, align 8
  ret %struct.mdesc_handle* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
